--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <section id="mrdrparkers-blog" class="content">
 <h1>mrdrparker’s blog</h1>
 <figure>
-<img src="img.jpg" title="Optional title" alt="Alt text" />
-<figcaption aria-hidden="true">Alt text</figcaption>
+<img src="a.png" title="Optional title" alt="Alt text" />
 </figure>
 <div class="grid-container">
 <section id="convert-markdown-to-html-with-css-and-toc"
