--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="mrdrparker" />
     <meta name="description" content="mrdrparker's web page." />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <title>(=^.^=)</title>
   </head>
 
@@ -30,7 +30,7 @@
         <h3>Active Quests</h3>
         <div class="grid-container">
           <div class="grid-item">
-            <img src="images/gray.png">
+            <img src="badges/gray.svg">
             <h4>Cryptopals</h4>
             <p>Challenges 1-3 done in Section 1. Completed in Python. Learning about 90's pop.</p>
           </div>
@@ -41,9 +41,9 @@
       <div>
         <h3>Not Started</h3>
         <div class="grid-container">
-          <div class="grid-item"><img src="images/gray.png"><h4>Microcorruption</h4><p>Complete the Microcorruption challenges</p></div>
-          <div class="grid-item"><img src="images/gray.png"><h4>Think Python</h4><p>Read and code along to Allen B. Downey's <em>Think Python</em>.</p></div>
-          <div class="grid-item"><img src="images/gray.png"><h4>Fantasy Computers</h4><p>Explore the TIC-80 and PICO-8 computers.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Microcorruption</h4><p>Complete the Microcorruption challenges</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Think Python</h4><p>Read and code along to Allen B. Downey's <em>Think Python</em>.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Fantasy Computers</h4><p>Explore the TIC-80 and PICO-8 computers.</p></div>
         </div>
         <hr />
       </div>
@@ -52,10 +52,10 @@
         <h3>Main Quests</h3>
         <p>Major milestones from my life that deserve a merit badge.</p>
         <div class="grid-container">
-          <div class="grid-item"><img src="images/coffee.png"><h4>B.S. in Computer Science</h4><p>Graduated from the University of Wyoming in 2022.</p></div>
-          <div class="grid-item"><img src="images/pancakes.png"><h4>UWYO Pi Day Challenge Finalist</h4><p>Participated in Month long math challenge. Top four participants recieved awards, including myself.</p></div>
-          <div class="grid-item"><img src="images/lantern.png"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage.</p></div>
-          <div class="grid-item"><img src="images/drink.png"><h4>UWYO Honorarium</h4><p>Programmed some stuff in Lean. It was wild. And I made $$$ doing it.</p></div>
+          <div class="grid-item"><img src="badges/degree.svg"><h4>B.S. in Computer Science</h4><p>Graduated from the University of Wyoming in 2022.</p></div>
+          <div class="grid-item"><img src="badges/pi.svg"><h4>UWYO Pi Day Challenge Finalist</h4><p>Participated in Month long math challenge. Top four participants recieved awards, including myself.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>UWYO Honorarium</h4><p>Programmed some stuff in Lean. It was wild. And I made $$$ doing it.</p></div>
         </div>
         <hr />
       </div>
@@ -64,14 +64,14 @@
         <h3>Side Quests</h3>
         <p>Other noteworthy life moments that are not necessarily impressive, but I wanted to include anyway.</p>
         <div class="grid-container">
-          <div class="grid-item"><img src="images/clean.png"><h4>TIS-100 Main Story</h4><p>Completed the TIS-100 campaign.</p></div>
-          <div class="grid-item"><img src="images/cut.png"><h4>Dirt Rally Bests</h4><p>Lots to explore here - achievements unlocked, best times on daily leaderboards, etc.</p></div>
-          <div class="grid-item"><img src="images/ghost.png"><h4>Full Time Employment</h4><p>Started my career in my chosen field of study.</p></div>
-          <div class="grid-item"><img src="images/leaf.png"><h4>Acquired Sombrero</h4><p>Went to restraunt on their final day. Was able to acquire a Sombrero off of the wall.</p></div>
-          <div class="grid-item"><img src="images/fire.png"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="images/tent.png"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="images/smore.png"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="images/list.png"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>TIS-100 Main Story</h4><p>Completed the TIS-100 campaign.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Dirt Rally Bests</h4><p>Lots to explore here - achievements unlocked, best times on daily leaderboards, etc.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Full Time Employment</h4><p>Started my career in my chosen field of study.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Acquired Sombrero</h4><p>Went to restraunt on their final day. Was able to acquire a Sombrero off of the wall.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
 
         </div>
       </div>
