--- a/index.html
+++ b/index.html
@@ -18,16 +18,37 @@
       </div>
       
       <div>
-        <p>mrdrparker<br>
-          Favorite Media: Ted Lasso, Taskmaster, Critical Role, <br>
-          Favorite Devs: Zachtronics, Double Fine, 2weeks, ConcernedApe, Young Horses, Tantan, System76<br>
-          Favorite Quotes: "Fútbol is life!" - Dani Rojas
+        <p>I'm not that interesting... So here is a nonexhaustive list of my favorite developers / groups of developers:<br>
+          Zachtronics, Double Fine, 2weeks, ConcernedApe, Young Horses, Tantan, System76<br>
         </p>
         <hr />
       </div>
 
       <div>
-        <h3>Active Quests</h3>
+        <h3>Completed Main Quests</h3>
+        <p>Major milestones from my life that deserve a merit badge.</p>
+        <div class="grid-container">
+          <div class="grid-item"><img src="badges/degree.svg"><h4>B.S. in Computer Science</h4><p>Graduated from the University of Wyoming in 2022.</p></div>
+          <div class="grid-item"><img src="badges/pi.svg"><h4>UWYO Pi Day Challenge Finalist</h4><p>I participated in my college's first Pi-Day Competition by completing a series of weekly math problems. I was one of four participants who were recognized by the event coordinators for providing outstanding submissions. I received a certificate, t-shirt, oloid, and one free math book.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage. Showed up early on Friday, skipped lunch, worked past 5:00pm. Worked on computers in person, from building to building. Also assisted a few users located in remote areas by walking them through the fix over a phone call.</p></div>
+          <div class="grid-item"><img src="badges/gray.svg"><h4>UWYO Summer REU</h4><p>Studied Lean: a programming language and theorem prover. I, along with another participant, created a Formal Logic Game by using the Lean-game-maker software.</p></div>
+        </div>
+        <hr />
+      </div>
+
+      <div>
+        <h3>Completed Side Quests</h3>
+        <p>Other noteworthy life moments that are not necessarily impressive, but I wanted to include anyway.</p>
+        <div class="grid-container">
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Completed TIS-100 puzzles</h4><p>I solved every puzzle in the TIS-100 segment map (just don't ask how long it took me).</p></div>
+          <!--<div class="grid-item"><img src="badges/gray.svg"><h4>Dirt Rally Bests</h4><p>Lots to explore here - achievements unlocked, best times on daily leaderboards, etc.</p></div>-->
+          <!--<div class="grid-item"><img src="badges/gray.svg"><h4>Full Time Employment</h4><p>Started my career in my chosen field of study.</p></div>-->
+          <div class="grid-item"><img src="badges/gray.svg"><h4>Acquired a Sombrero</h4><p>Went to a restraunt on their final day (the owner was retiring). I was able to acquire a Sombrero off of the wall.</p></div>
+        </div>
+      </div>
+
+      <div>
+        <h3>Currently Active Quests</h3>
         <div class="grid-container">
           <div class="grid-item">
             <img src="badges/gray.svg">
@@ -48,33 +69,7 @@
         <hr />
       </div>
 
-      <div>
-        <h3>Main Quests</h3>
-        <p>Major milestones from my life that deserve a merit badge.</p>
-        <div class="grid-container">
-          <div class="grid-item"><img src="badges/degree.svg"><h4>B.S. in Computer Science</h4><p>Graduated from the University of Wyoming in 2022.</p></div>
-          <div class="grid-item"><img src="badges/pi.svg"><h4>UWYO Pi Day Challenge Finalist</h4><p>Participated in Month long math challenge. Top four participants recieved awards, including myself.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>UWYO Honorarium</h4><p>Programmed some stuff in Lean. It was wild. And I made $$$ doing it.</p></div>
-        </div>
-        <hr />
-      </div>
 
-      <div>
-        <h3>Side Quests</h3>
-        <p>Other noteworthy life moments that are not necessarily impressive, but I wanted to include anyway.</p>
-        <div class="grid-container">
-          <div class="grid-item"><img src="badges/gray.svg"><h4>TIS-100 Main Story</h4><p>Completed the TIS-100 campaign.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Dirt Rally Bests</h4><p>Lots to explore here - achievements unlocked, best times on daily leaderboards, etc.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Full Time Employment</h4><p>Started my career in my chosen field of study.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Acquired Sombrero</h4><p>Went to restraunt on their final day. Was able to acquire a Sombrero off of the wall.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>Burning Bus</h4><p>My bus caught on fire while traveling to a summer camp. No one was hurt. We watched the bus burn down to its frame. It takes awhile for firefigters to reach a burning bus located deep in mountain roads.</p></div>
-
-        </div>
-      </div>
 
     </div>
   </body>
