--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="grid-container">
           <div class="grid-item"><img src="badges/degree.svg"><h4>B.S. in Computer Science</h4><p>Graduated from the University of Wyoming in 2022.</p></div>
           <div class="grid-item"><img src="badges/pi.svg"><h4>UWYO Pi Day Challenge Finalist</h4><p>I participated in my college's first Pi-Day Competition by completing a series of weekly math problems. I was one of four participants who were recognized by the event coordinators for providing outstanding submissions. I received a certificate, t-shirt, oloid, and one free math book.</p></div>
-          <div class="grid-item"><img src="badges/gray.svg"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage. Showed up early on Friday, skipped lunch, worked past 5:00pm. Worked on computers in person, from building to building. Also assisted a few users located in remote areas by walking them through the fix over a phone call.</p></div>
+          <div class="grid-item"><img src="badges/bsod.svg"><h4>CrowdStrike Outage</h4><p>July 19<sup>th</sup>, 2024 - Assisted with remediating computers affected with the CrowdStrike Outage. Showed up early on Friday, skipped lunch, worked past 5:00pm. Worked on computers in person, from building to building. Also assisted a few users located in remote areas by walking them through the fix over a phone call.</p></div>
           <div class="grid-item"><img src="badges/gray.svg"><h4>UWYO Summer REU</h4><p>Studied Lean: a programming language and theorem prover. I, along with another participant, created a Formal Logic Game by using the Lean-game-maker software.</p></div>
         </div>
         <hr />
